--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "dotenv": "^8.2.0",
+    "aylien_textapi": "^0.7.0",
     "express": "^4.17.1",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5"
@@ -31,7 +31,6 @@
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^3.0.6",
-    "webpack-dev-server": "^3.11.0",
-    "aylien_textapi": "^0.7.0"
+    "webpack-dev-server": "^3.7.2"
   }
 }
